2003-07-17  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.h, src/lang.awk, src/lang.c, src/escm.c, src/lang/*:
	Added format record to configuration files.

2003-07-16  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* doc/helper.scm: Removed unused procedures.

	* src/escm.h, src/cgi.c, src/escm.c, src/filter.c: Added compilation
	switches.

	* test/t120_awk.test, test/t140_prst_awk.test, src/filter.c:
	Rewrote the help message.

	* acinclude.m4, configure.ac: Replaced --enable-handler with
	--enable-cgi.

	* src/escm.c (escm_preproc): Use a short stack to keep
	characters while checking whether they are a good tag.

	* Makefile.am (test-clean): Added test-clean target to erase the
	log file in test/.

	* src/lang.awk, src/lang.c, src/escm.h, src/escm.c: Changed
	struct escm_lang.

2003-07-15  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/lang/*, src/lang.awk, src/lang.c: Renamed keywords to @XXX@.

	* src/lang/*, src/lang.awk, src/lang.c (parse_lang): Suppressed
	name and command records.

	* src/lang/*, src/lang.awk, src/escm.c (escm_preproc): The subname
	for display mode is always "d".

	* src/filter.c (main): Check the values of ESCM_BACKEND and
	ESCM_DEFAULT.

	* configure.ac: Renamed --with-default-lang to --with-default.

	* src/filter.c, src/escm.c: Some code of escm.c related to
	command line options was moved to filter.c.

	* src/escm.h, src/cgi.c, src/escm.c, src/filter.c: Suppressed
	escm_is_cgi() and use escm_cgi to store the value of
	GATEWAY_INTERFACE.

2003-07-14  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.h, src/*.c: Wrapped error messages with a macro.

	* src/Makefile.am, src/meta_arg.h, src/meta_arg.c, src/escm.h,
	src/escm.c, src/filter.c: Changed the policy on signalling
	an error.

2003-07-13  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* configure.ac, src/Makefile.am, doc/Makefile.am, doc/readme.escm,
	doc/aescm.epod: Replace "gimmick" with "polyglot".
	* configure.ac, src/Makefile.am, src/lang/Makefile.am: Added
	Makefile.am to src/lang/.
